<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".interfaces.splashscreen.SplashActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/gradient3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basantara"
                    android:fontFamily="@font/poppins_bold_options"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/selamat_datang"
                        android:textColor="@color/white"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold_options"
                        android:text="@string/agus_supratman"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_logoutputih"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="45dp"
                    android:layout_margin="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/poppins_bold_options"
                            android:text="@string/app"
                            android:textColor="@color/font"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="40dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/desc"
                            android:textColor="@color/font"
                            android:textSize="12sp" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topik_pembelajaran"
                    android:fontFamily="@font/poppins_bold_options"
                    android:textColor="@color/font"
                    android:textSize="13sp"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/perkenalan"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        app:cardCornerRadius="45dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/poppins_bold_options"
                                android:text="@string/_01"
                                android:textColor="@color/white"
                                android:textSize="60sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="100dp"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/perkenalan"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/scan"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        app:cardCornerRadius="45dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/poppins_bold_options"
                                android:text="@string/_02"
                                android:textColor="@color/white"
                                android:textSize="60sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="100dp"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/scanning"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/live"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        app:cardCornerRadius="45dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/poppins_bold_options"
                                android:text="@string/_03"
                                android:textColor="@color/white"
                                android:textSize="60sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="100dp"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/live_scan"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
